2007-01-05  Daniel Elstner  <daniel.kitta@gmail.com>

	* macros: Rename directory to m4.  I love Subversion.
	* autogen.sh: Change "-I macros" to "-I m4" in aclocal invocation.
	* configure.ac (ACLOCAL_AMFLAGS): Likewise for this substitution.

2007-01-05  Daniel Elstner  <daniel.kitta@gmail.com>

	* Makefile.am (AM_CPPFLAGS): Remove leftover $(PCRE_CFLAGS).
	(src_regexxer_LDADD): Likewise for $(PCRE_LIBS).

2007-01-05  Daniel Elstner  <daniel.kitta@gmail.com>

	* configure.ac (PCRE_CHECK_VERSION): Remove invocation of hand-
	crafted macro and just add "libpcre >= 5.0" to PKG_CHECK_MODULES()
	instead.  PCRE supports pkg-config since version 5.0, released
	September 2004.  I think it is safe to make that a requirement.
	(PCRE_CHECK_UTF8): Ditch the UTF-8 check, which was problematic
	anyway since it involved executing a runtime test.  Just rely on
	regexxer to report an error at runtime if libpcre is found not to
	support UTF-8.  This is acceptable since updating to a libpcre
	with UTF-8 support does not require rebuilding regexxer.
	* macros/pcre.m4: Get rid of it.

2007-01-04  Daniel Elstner  <daniel.kitta@gmail.com>

	* Makefile.am: Switch to a non-recursing build system.  The entire
	source tree except for the po/ subdirectory is now built from the
	toplevel Makefile.  For the rationale of this change, see Peter
	Miller's excellent paper "Recursive Make Considered Harmful":
	http://members.pcug.org.au/~millerp/rmch/recu-make-cons-harm.html

	The new system makes use of Automake's subdir-objects feature to
	put compilation results into the src/ subdirectory.  The Automake
	variables and rules from the subdirectories have been merged into
	the toplevel Makefile.am and adapted as necessary.

	(DISTCHECK_CONFIGURE_FLAGS): Lower --enable-warnings argument from
	"hardcore" to "maximum", in order to get distcheck to work despite
	the non-virtual base class warning triggered by gconfmm.

	* {pixmaps,src,ui}/Makefile.am: Remove from repository.
