@@ -50,7 +50,7 @@ namespace
 /*
  * Include inlined raw pixbuf data generated by gdk-pixbuf-csource.
  */
-#include <pixmaps/stockimages.h>
+#include <ui/stockimages.h>
 
 
 struct StockIconData
